Nav: Fixed icon getting cut off on wide screens

--- a/src/style/nav.scss
+++ b/src/style/nav.scss
@@ -13,6 +13,7 @@
 
     #icon {
         height: 7vmax;
+        max-height: 100%;
         border-radius: .2vmax;
     }
 
